--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100;9..144,500;9..144,900&family=Outfit:wght@400;700&display=swap");
 body {
   background-color: #d6e2f0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 100vh;
-  overflow-y: hidden;
+  padding: 20% 5% 0;
+  font-family: "Outfit", sans-serif;
+  font-size: 15px;
+  text-align: center;
 }
 
-.container {
-  width: 292px;
-  height: 454px;
-  background-color: white;
+body h1 {
+  margin: 0;
+  margin-top: 30px;
+  font-size: 1.3125rem;
+}
+
+body p {
+  margin: 0;
+  margin-top: 0.9375rem;
+  color: #7b879d;
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    padding: 6% 0% 0 0;
+  }
+}
+
+body .container {
+  background-color: #fff;
+  border-radius: 1.5625rem;
+  padding: 1.375rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,48 +36,24 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-radius: 20px;
-  padding: 28px;
+  max-width: 25.625rem;
 }
 
-.container .qr-image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (min-width: 1000px) {
+  body .container {
+    max-width: 15.625rem;
+    margin: auto;
+  }
 }
 
-.container .qr-image img {
-  width: 315px;
-  border-radius: 20px;
-  height: 321px;
-}
-
-.container .qr-content {
-  padding: 20px;
-}
-
-.container .qr-content .qr-title h1 {
-  margin: 0;
-  font-size: 20px;
-  font-family: "Outfit", sans-serif;
-  margin-bottom: 12px;
-  text-align: center;
-}
-
-.container .qr-content .qr-copy p {
-  margin: 0;
-  font-size: 15px;
-  font-family: "Outfit", sans-serif;
-  text-align: center;
-  color: #7b879d;
+body .container img {
+  width: 100%;
+  border-radius: 1.125rem;
 }
 /*# sourceMappingURL=styles.css.map */
