--- a/css/typography.scss
+++ b/css/typography.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100;9..144,500;9..144,900&family=Outfit:wght@400;700&display=swap');
 
 $fonts : 'Outfit', sans-serif;
+$bodyfont : 15px;
+
+//mobile
+$desktop : 1000px;
