--- a/css/styles.scss
+++ b/css/styles.scss
@@ -23,7 +23,6 @@ body {
     .container{
         background-color: #fff;
         border-radius: 1.5625rem;
-        padding: 1.375rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -33,10 +32,18 @@ body {
             max-width: 15.625rem;
             margin: auto;
         }
+     .qr-image {
+         padding-top: 1rem;
+         padding-left : 1rem;
+         padding-right: 1rem;
+         padding-bottom: 0;
+             
         img{
             width: 100%;
             border-radius: 1.125rem;
-
         }
+    }
+    .qr-content {
+        padding: 1.375rem;
     }
 }
